<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Fresh Pots</string>

    <!-- Label for overflow menu option that inserts fake item data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_items">Delete All Items</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="dialog_delete_all_msg">Warning! Are you sure you want to delete all items?</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Nothings brewing yet...</string>

    <!-- Subtitle text for the empty view prompting the user to populate the database [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by clicking the pink add product button.</string>

    <!-- Label for overflow menu option that links to the catalogue activity [CHAR LIMIT=20] -->
    <string name="action_goto_catalogue">Catalogue</string>

    <!-- Label for overflow menu option that adds and item [CHAR LIMIT=20] -->
    <string name="action_add_item">Add a Product</string>

    <!-- Text for item type information in catalogue view [CHAR LIMIT=20] -->
    <string name="catalogue_item_type_text">Item Type:</string>

    <!-- Text for stock information in catalogue view [CHAR LIMIT=20] -->
    <string name="catalogue_stock_text">Current Stock:</string>

    <!-- Text for sales information in catalogue view [CHAR LIMIT=20] -->
    <string name="catalogue_sales_text">Sales:</string>

    <!-- Button Label for sale in catalogue activity [CHAR LIMIT=12] -->
    <string name="button_edit">View/Edit</string>

    <!-- Button Label for sale in catalogue activity [CHAR LIMIT=12] -->
    <string name="button_sale">Sell Item</string>

    <!-- Dialogue label for sales quantity [CHAR LIMIT=20] -->
    <string name="sell_dialogue_title">How many sold?</string>

    <!-- Dialogue confirmation label [CHAR LIMIT=20] -->
    <string name="counter_dialogue_confirm">Confirm</string>

    <!-- Dialogue cancel label [CHAR LIMIT=20] -->
    <string name="counter_dialogue_cancel">Cancel</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">Add a New Product</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_view_item">View Product</string>

    <!-- Title for the activity to edit an existing pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_item">Edit Product</string>

    <!-- Editor menu option save item [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Editor menu option delete item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Product Name</string>

    <!-- Text hint for the item type field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_type">Product Type</string>

    <!-- Text hint for cost field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_cost">Enter Cost</string>

    <!-- Item cost currency [CHAR LIMIT=5] -->
    <string name="currency_item_cost">yen</string>

    <!-- Label for overview category of image in the editor [CHAR LIMIT=30] -->
    <string name="category_image">Image</string>

    <!-- Label for availability category in the editor [CHAR LIMIT=30] -->
    <string name="category_availability">Availability</string>

    <!-- Label for dropdown item availability option: unavailable[CHAR LIMIT=20] -->
    <string name="availability_unavailable">Unavailable</string>

    <!-- Label for dropdown item availability option: in store only[CHAR LIMIT=20] -->
    <string name="availability_instore">In Store Only</string>

    <!-- Label for dropdown item availability option: online only[CHAR LIMIT=20] -->
    <string name="availability_online">Online Only</string>

    <!-- Label for dropdown item availability option: in store and online[CHAR LIMIT=20] -->
    <string name="availability_all">Store and Online</string>

    <!-- Label for stock category in the editor [CHAR LIMIT=30] -->
    <string name="category_stock">Stock</string>

    <!-- Label for stock category in the editor [CHAR LIMIT=30] -->
    <string name="category_order">On Order</string>

    <!-- Toast prompt for stock/availability conflict -->
    <string name="toast_stock_conflict">Make sure stock and availability are set correctly.</string>

    <!-- Toast prompt for null fields -->
    <string name="toast_null_input">The highlighted fields cannot be empty.</string>

    <!-- Dialog prompt message for leaving editor before saving [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Are you sure you want to discard your changes?</string>

    <!-- Dialog prompt button text to discard edits. [CHAR LIMIT=20] -->
    <string name="discard">Discard Changes</string>

    <!-- Dialog prompt button text to continue edit [CHAR LIMIT=20] -->
    <string name="keep_editing">Continue Editing</string>

    <!-- Dialog prompt to confirm item deletion [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Are you sure you want to delete this product?</string>

    <!-- Dialog prompt button: confirm deletion. [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog prompt button: cancel deletion. [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Editor button: Add Image. [CHAR LIMIT=20] -->
    <string name="editor_button_add_image">Add Image</string>

    <!-- Editor button: Edit Image. [CHAR LIMIT=20] -->
    <string name="editor_button_edit_image">Edit Image</string>

    <!-- Editor button: Edit Image. [CHAR LIMIT=20] -->
    <string name="editor_button_order">Order</string>

    <!-- Toast message for successful item deletion [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_successful">Product deleted.</string>

    <!-- oast message for unsuccessful item deletion[CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_failed">Yikes! Error when deleting product.</string>

    <!-- Toast message for successful item addition[CHAR LIMIT=NONE] -->
    <string name="editor_item_insert_success">Horrah! New product added.</string>

    <!-- Toast message for unsuccessful item addition[CHAR LIMIT=NONE] -->
    <string name="editor_item_insert_error">Oops! Please try again.</string>

    <!-- Toast message for successful item update[CHAR LIMIT=NONE] -->
    <string name="editor_item_update_success">Great! Product Updated.</string>

    <!-- Toast message for unsuccessful item addition[CHAR LIMIT=NONE] -->
    <string name="editor_item_update_error">Huston, we have a problem. Please check entries.</string>

    <!-- Toast message for successful item deletion [CHAR LIMIT=NONE] -->
    <string name="editor_nothing_added">No products were added.</string>

    <!-- Dialogue category title for restock [CHAR LIMIT=30] -->
    <string name="dialogue_restock_title">Choose Order Quantity</string>

    <!-- Dialogue restock - counter maximum [CHAR LIMIT=30] -->
    <string name="dialogue_restock_toast_counter_max">Sorry! Maximum stock order is</string>

    <!-- Dialogue restock - counter maximum [CHAR LIMIT=30] -->
    <string name="dialogue_restock_toast_counter_min">Sorry! You can\'t order less than one item.</string>

    <!-- Toast message for no stock [CHAR LIMIT=NONE] -->
    <string name="toast_nostock">Sorry, but there is no stock!</string>

    <!-- Toast message for sale counter - maximum stock reached [CHAR LIMIT=NONE] -->
    <string name="toast_salecounter_max">Sorry! Maximum stock available is</string>

    <!-- Toast message for sale counter - minimum reached [CHAR LIMIT=NONE] -->
    <string name="toast_salecounter_min">Sorry! You can\'t sell less than one item.</string>

    <!-- Toast message for stock counter - maximum stock reached [CHAR LIMIT=NONE] -->
    <string name="toast_stockcounter_max">Sorry! Maximum stock input reached.</string>

    <!-- Toast message for stock counter - minimum reached [CHAR LIMIT=NONE] -->
    <string name="toast_stockcounter_min">Sorry! You can\'t have less than one item.</string>

    <!-- Toast message for sale counter - minimum reached [CHAR LIMIT=NONE] -->
    <string name="toast_image_error">Sorry! We couldn\'t access that image.</string>

    <!-- E-mail application chooser string [CHAR LIMIT=50] -->
    <string name="email_order_chooser">Send mail using...</string>

    <!-- E-mail subject for order item [CHAR LIMIT=50] -->
    <string name="email_order_subject">Product Order</string>

    <!-- E-mail content [CHAR LIMIT=50] -->
    <string name="email_order_content">Order for:</string>

    <!-- E-mail content [CHAR LIMIT=50] -->
    <string name="email_order_content_quantity">Quantity:</string>

    <!-- Order success promt title [CHAR LIMIT=50] -->
    <string name="dialog_email_order_title">Was your order successful?</string>

    <!-- Order success promt title [CHAR LIMIT=50] -->
    <string name="toast_email_tryagain">Please try again later.</string>

    <!-- Order success: yes [CHAR LIMIT=20] -->
    <string name="yes">Yes</string>

    <!-- Order success promt title [CHAR LIMIT=20] -->
    <string name="no">No</string>
</resources>
